--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
-*.bak*
+*
+!Figures
+!notes
+!.gitignore
+!*.pdf
+!*.tex
+!fer.cls
+!fer_IEEEtran_EN.bst
+!fer_IEEEtran_HR.bst
+!fer_plainnat_EN.bst
+!fer_plainnat_HR.bst
+!hr_0036535500_90.pdf
+!indent.yaml
+!LICENSE
+!literatura.bib
+!README.md
+!skica.md
+
